# miamiam

./: .gitignore  hello.py  mise.toml  pyproject.toml  run
.github/: copilot-instructions.md
miamiam/: __init__.py  client.py  logging.py  models.py  settings.py  utils.py
