[project]
name = "miamiam"
version = "0.1.0"
description = "Look for new restaurant openings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.8.0",
    "structlog>=25.1.0",
    "httpx>=0.26.0",
    "pendulum>=3.0.0",
    "tenacity>=9.0.0",
    "click>=8.1.8",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.7",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
